--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME="SIRA - Sistema Integral de Repuestos Automotores"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=America/Argentina/Buenos_Aires
 APP_URL=http://localhost
 
@@ -25,8 +25,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sira_db
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=adminmysql
+DB_PASSWORD=Mikaela$
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
